--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ body {
     overflow-x: hidden !important; /* Hide horizontal scrollbar */
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(0deg, rgb(5, 50, 72) 3%, rgb(55, 55, 55) 38%, rgb(20, 45, 79) 98%);
-    animation: gradient 15s ease infinite;
-    background-size: 400% 400%;
+    background: linear-gradient(45deg, rgb(3, 79, 117) 3%, rgb(78, 78, 79) 38%, rgb(165, 118, 42) 100%);
+    animation: gradient 8s ease infinite;
+    background-size: 500% 500%;
     background-attachment: fixed;
     margin: 0;
     padding: 0;
@@ -19,13 +19,19 @@ body {
 }
 
 .areaSup{
-    height: 20vh;
+    height: 15%;
+    display: flex;
+    justify-content: center !important;
+}
+.logo{
+    width: auto;
+    height: 5vh;
 }
 .areaCentral{
-    height: 70vh;
+    height: 70%;
 }
 .areaInf{
-    height: 10vh;
+    height: 15vh;
 }
 @keyframes gradient {
     0% {
@@ -38,66 +44,7 @@ body {
         background-position: 0% 0%;
     }
 }
-
-.lines {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    margin: auto;
-    width: 90vw;
-  }
-  
-  .line {
-    position: absolute;
-    width: 1px;
-    height: 100%;
-    top: 0;
-    left: 50%;
-    background: rgba(255, 255, 255, 0.1);
-    overflow: hidden;
-  }
-  .line::after {
-    content: "";
-    display: block;
-    position: absolute;
-    height: 15vh;
-    width: 100%;
-    top: -50%;
-    left: 0;
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
-    -webkit-animation: drop 7s 0s infinite;
-            animation: drop 7s 0s infinite;
-    -webkit-animation-fill-mode: forwards;
-            animation-fill-mode: forwards;
-    -webkit-animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
-            animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
-  }
-  .line:nth-child(1) {
-    margin-left: -25%;
-  }
-  .line:nth-child(1)::after {
-    -webkit-animation-delay: 2s;
-            animation-delay: 2s;
-  }
-  .line:nth-child(3) {
-    margin-left: 25%;
-  }
-  .line:nth-child(3)::after {
-    -webkit-animation-delay: 2.5s;
-            animation-delay: 2.5s;
-  }
-  
-  @-webkit-keyframes drop {
-    0% {
-      top: -50%;
-    }
-    100% {
-      top: 110%;
-    }
-  }
-  
+ 
   @keyframes drop {
     0% {
       top: -50%;
