--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     padding: 0;
     height: 100vh;
 }
+
 .card{
     background-color: rgba(255, 255, 255, 0.148) !important;
     border-radius: 30px !important;
@@ -24,11 +25,23 @@ body {
 .areaSup{
     height: 15%;
     display: flex;
-    justify-content: center !important;
+    flex-direction: column;
+    align-content: center !important;
 }
 .logo{
     width: auto;
     height: 5vh;
+    transition: all 1s
+}
+
+.logo:hover{
+    
+    transform: scale(1.2);
+    
+}
+
+logo:active{
+    transform: scale(1.2);
 }
 .areaCentral{
     height: 70%;
@@ -44,7 +57,57 @@ body {
     width: auto;
 }
 
-
+.lines {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    margin: auto;
+    width: 90vw;
+    z-index: -1;
+  }
+  
+  .line {
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    left: 50%;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+  }
+  .line::after {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 15vh;
+    width: 100%;
+    top: -50%;
+    left: 0;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, #ffffff 75%, #ffffff 100%);
+    -webkit-animation: drop 5s 0s infinite;
+            animation: drop 7s 0s infinite;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
+    -webkit-animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+            animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+  }
+  .line:nth-child(1) {
+    margin-left: -37%;
+  }
+  .line:nth-child(1)::after {
+    -webkit-animation-delay: 2s;
+            animation-delay: 2s;
+  }
+  .line:nth-child(3) {
+    margin-left: 37%;
+  }
+  .line:nth-child(3)::after {
+    -webkit-animation-delay: 2.5s;
+            animation-delay: 2.5s;
+  }
+  
 
 @keyframes gradient {
     0% {
