--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
     overflow-x: hidden !important; /* Hide horizontal scrollbar */
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     overflow: auto;
-    background: linear-gradient(45deg, rgb(3, 79, 117) 18%, rgb(78, 78, 79) 38%, rgb(165, 118, 42) 70%);
-    animation: gradient 5s ease infinite;
+    background: linear-gradient(45deg, rgb(168, 127, 12) 18%, rgb(21, 134, 172) 38%, rgb(8, 33, 85) 70%);
+    animation: gradient 8s ease infinite;
     background-size: 500% 500%;
     background-attachment: fixed;
     margin: 0;
@@ -18,9 +18,16 @@ body {
     height: 100vh;
 }
 
+.btn-outline-warning{
+    background-color: #F9711C !important;
+    border-color: #F9711C !important;
+    color: white !important;
+}
+
 .card{
     background-color: rgba(255, 255, 255, 0.148) !important;
     border-radius: 30px !important;
+    backdrop-filter: blur(3px);
 }
 .areaSup{
     height: 15%;
@@ -71,7 +78,7 @@ logo:active{
   .line {
     position: absolute;
     width: 1px;
-    height: 100%;
+    height: 91%;
     top: 0;
     left: 50%;
     background: rgba(255, 255, 255, 0.1);
