--- a/style.css
+++ b/style.css
@@ -58,6 +58,16 @@ body {
 .contact:hover{
   transform: scale(1.2);
 }
+.contact2{
+  transition: all 1seg;
+  margin-top: 3rem !important;
+  height: 32px !important;
+  width: auto !important;
+  transition: all 1seg;
+}
+.contact2:hover{
+  transform: scale(1.1);
+}
 .imgCard {
   height: 32vh !important;
   width: auto;
