--- a/style.css
+++ b/style.css
@@ -12,13 +12,71 @@ body {
   /* Hide horizontal scrollbar */
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   overflow: auto;
-  background: linear-gradient(90deg, rgb(14, 46, 123) 29%, rgb(21, 92, 172) 38%, rgb(8, 33, 85) 70%);
+  background: linear-gradient(0deg, rgb(7, 30, 82) 29%, rgb(12, 71, 138) 38%, rgb(6, 26, 69) 70%);
   animation: gradient 14s ease infinite;
   background-size: 500% 500%;
   background-attachment: fixed;
   margin: 0;
   padding: 0;
   height: 100vh;
+}
+.grid{
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position: center center;
+  opacity: 40%;
+  z-index: -1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 160vw;
+  height: 200vh;
+  background-image: url("./images/grid.png");
+  animation: scaleAnimation 20s infinite linear; /* 5 segundos de duración, infinito y alternante */
+}
+.estrellas {
+  opacity: 50%;
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position: center center;
+  z-index: -2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 200vh;
+  background-image: url("./images/estrellas.png");
+  animation: scaleAnimation 5s infinite alternate, rotateAnimation 220s infinite linear; /* 5 segundos de duración, infinito y alternante */
+  
+}
+.adelante{
+  z-index: 2 !important;
+}
+
+@keyframes scaleAnimation {
+  0% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+
+  50% {
+    transform: translate(-50%, -50%) scale(1.3);
+    /* Escala aumentada */
+  }
+
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+@keyframes rotateAnimation {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+}
+100% {
+    transform: translate(-50%, -50%) rotate(360deg); /* Rotación completa */
+}
 }
 
 .btn-outline-warning {
@@ -43,31 +101,38 @@ body {
   height: 100vh !important;
   width: 100vw !important;
 }
-.columna{
+
+.columna {
   margin-top: 20vh !important;
   width: 100px !important;
 }
-.columna2{
+
+.columna2 {
   margin-top: 35vh !important;
   width: 100px !important;
 }
-.contact{
+
+.contact {
   height: 48px !important;
   transition: all 1seg;
 }
-.contact:hover{
+
+.contact:hover {
   transform: scale(1.2);
 }
-.contact2{
+
+.contact2 {
   transition: all 1seg;
   margin-top: 3rem !important;
   height: 32px !important;
   width: auto !important;
   transition: all 1seg;
 }
-.contact2:hover{
+
+.contact2:hover {
   transform: scale(1.1);
 }
+
 .imgCard {
   height: 32vh !important;
   width: auto;
@@ -105,16 +170,18 @@ body {
   height: 68%;
 
 }
-.frente{
+
+.frente {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  z-index:21;
+  z-index: 21;
   position: absolute;
   height: 100vh;
   width: 100vw;
 }
+
 .areaInf {
   height: 15%;
   z-index: 2 !important;
@@ -137,9 +204,11 @@ body {
   justify-content: center;
 
 }
-.pantallaArriba{
+
+.pantallaArriba {
   height: 10vh !important;
 }
+
 .animaLogo {
   height: 40vh !important;
   width: auto !important;
@@ -147,6 +216,7 @@ body {
   border: 6px solid rgb(255, 255, 255);
   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 }
+
 .animaLogo2 {
   height: 40vh !important;
   width: auto !important;
@@ -154,10 +224,13 @@ body {
   border: 6px solid rgb(255, 255, 255);
 }
 
-.carousel-caption{
+
+
+.carousel-caption {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
 }
+
 .logocontent {
   height: 100% !important;
 }
