--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ body {
 
 .contact2 {
   transition: all 1seg;
-  margin-top: 3rem !important;
+  margin-top: 1rem !important;
   height: 32px !important;
   width: auto !important;
   transition: all 1seg;
@@ -249,19 +249,25 @@ body {
 }
 .swiper {
   width: 100% !important;
-  height: 65vh !important;
+  height: 70vh !important;
   margin: 0px;
 }
 .imgNoticia{
   width: 100%;
   height: 100%;
+  border-bottom: 6px solid rgb(255, 255, 255);
 }
+.swiper-button-prev{
+  color: white;
+}
+.swiper-button-next{
+  color: white;
+}
+
 .swiper-slide{
   height: 100% !important;
-  
   border-radius: 30px !important;
   border: 6px solid rgb(255, 255, 255);
-  
   overflow: hidden;
 }
 .line {
