--- a/style.css
+++ b/style.css
@@ -249,13 +249,13 @@ body {
 }
 .swiper {
   width: 100% !important;
-  height: 70vh !important;
+  height: 75vh !important;
   margin: 0px;
 }
 .imgNoticia{
   width: 100%;
   height: 100%;
-  border-bottom: 6px solid rgb(255, 255, 255);
+  border-bottom: 4px solid rgb(255, 255, 255);
 }
 .swiper-button-prev{
   color: white;
@@ -263,11 +263,14 @@ body {
 .swiper-button-next{
   color: white;
 }
+.btn-outline-light{
+  align-self: center !important;
 
+}
 .swiper-slide{
   height: 100% !important;
   border-radius: 30px !important;
-  border: 6px solid rgb(255, 255, 255);
+  border: 4px solid rgb(255, 255, 255);
   overflow: hidden;
 }
 .line {
